php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21338 Passing empty string to html_entity_decode makes Apache crash
Submitted: 2003-01-02 08:56 UTC Modified: 2003-01-02 13:50 UTC
From: Michael dot Beer at bluewin dot ch Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 4CVS-2003-01-02 (dev) OS: Windows 2000
Private report: No CVE-ID: None
 [2003-01-02 08:56 UTC] Michael dot Beer at bluewin dot ch
The following code makes Apache (2.0.43/Win2k SP3) crash:
<?php html_entity_decode(""); ?>

This happened with PHP 4.2.3, 4.3.0 and 4.4.0-dev (php4-win32-200301021130.zip).

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-02 13:50 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 03:00:01 2026 UTC