Fixed bug #21338 (crash inside html_entity_decode() when "" is passed). Added test case for the bug.