ext/standard/html.c
@@ -674,6 +674,9 @@ PHPAPI char *php_unescape_html_entities(unsigned char *old, int oldlen, int *new
 	
 	ret = estrdup(old);
 	retlen = oldlen;
+	if (!retlen) {
+		goto empty_source;
+	}
 	
 	if (all) {
 		/* look for a match in the maps for this charset */
@@ -722,7 +725,7 @@ PHPAPI char *php_unescape_html_entities(unsigned char *old, int oldlen, int *new
 		efree(ret);
 		ret = replaced;
 	}
-	
+empty_source:	
 	*newlen = retlen;
 	return ret;
 }
